[metadata]
name = flyxdm
version = 0.0.0
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Python primitives for - On the fly far field X-ray Diffraction crystal state estimation.
long_description = file: README.md
long_description_content_type = text/md
url = https://github.com/fable-3dxrd/flyxdm
project_urls =
    Documentation = https://fable-3dxrd.github.io/flyxdm/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.2,<3.10
